2006-06-20  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/smilesformat.cpp: Allow use of H atoms for a root
	atom when used in a cis/trans "/" or "\" specification. Make sure
	to output [H] atoms when in a cis/trans specification. Fixes
	PR#1508783. Fix part of PR#1508741 -- chiral atoms should be fine
	as root nodes (which preserves the ordering).

2006-06-19  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* test/files/invalid-smarts.txt: Add invalid ring closure bond
	specifications suggested by Craig in PR#1503849.

	* src/parsmart.cpp: Fix PR#1503849 for invalid SMARTS ring
	closures -- check both beginning and end bond specifications for
	the closure. Uses new function EquivalentBondExpr to test if
	two bond specifications are equivalent.
	Fix part of PR#1506408 for SMARTS matching @ and @@ atom
	specifications.

	* src/formats/smilesformat.cpp: Fix cis/trans problem with
	PR#1506408 -- IsUp/IsDown parsing support in SMILES was
	inconsistent with mol.h and parsmart.cpp. "/" is Up "\" is Down.

	* test/files/smartsresults.txt: Regenerate using above changes.

	* src/kekulize.cpp: Fix PR#1504089 by adding a special case to
	prevent double bonds between aromatic S-S systems, which is
	unneeded to show aromaticity.

	* test/wrapper.sh: Add smilesmatch to list to prevent regression
	on PR#1506408.

	* test/ringtest.cpp, test/smartstest.cpp: Correct minor errors in
	finding filenames and result generation.

	* test/files/nci.smi: Add new test SMILES file.

	* test/smilesmatch.cpp: Use it.

2006-06-15 Chris Morley <ob@gaseq.co.uk>
	
	* src/formats/smilesformat.cpp(ParseSmiles): when using 
	extension and bond is doubled, add 
	UnsetImplicitValencePerceived() so that implicit hydrogens are
	recounted.
	
	* src/formats/smilesformat.cpp(GetSmilesElement): ensure explicit
	hydrogens are always written with bracketed atoms (esp when
	charged; [OH3+] was being output incorrectly).
	
	* test/files/FormulaTest.smi: Added. Contains several small